# tdsp-navigator-clean

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile.notebook  Dockerfile.pipeline  README.md  Remy_Ndayizeye_Copy_NAVIGATOR_Transportation_Data_Science_Project_(TDSP).ipynb  docker-compose.yaml  dockerfile  environment_stabilization_guide.md  kedro_data_loading_lessons.md  nyc_fatality_analysis_lethality_paradox-2.html  pyproject.toml  stats.json
__marimo__/session/: nyc_vision_crash_fatality_final.py.json  your_notebook.py.json
conf/: logging.yml
conf/base/: catalog.yml  parameters.yml  parameters_crash_ingestion.yml
docs/source/: conf.py  index.rst
notebooks/: analysis.py  change_point_analysis_code.py  hybrid_approach_for_piororitization.py  hypbrid_approach_for_prioritization.py  nyc_fatality_analysis_lethality_paradox.py  nyc_visio_zero_final_streamlined copy.py  nyc_visio_zero_final_streamlined.py  nyc_vision_crash_fatality_final.py  nyc_vision_zero_analysis_final.py  nyc_vision_zero_hybrid.py  tdsp_navigator_analysis.py  test.py
notebooks/__marimo__/session/: analysis.py.json  gemini-code-1778416825059.py.json  gemini-code-1778420048428_final.py.json  hybrid_approach_for_piororitization.py.json  nyc_fatality_analysis_lethality_paradox.py.json  nyc_visio_zero_final_streamlined.py.json  nyc_vision_crash_fatality_final.py.json  nyc_vision_zero_analysis_final.py.json  nyc_vision_zero_hybrid.py.json  test.py.json  (+1 more)
src/: requirements.txt  requirements_analysis.txt  requirements_pipeline.txt
src/tdsp_navigator/: __init__.py  __main__.py  pipeline_registry.py  settings.py
src/tdsp_navigator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+5 files in other folders)
