[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.9"
name = "tdsp_navigator"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "marimo>=0.1.0",
    "kedro~=0.19.14",
    "kedro-datasets[pandas]~=3.0",
    "geopandas",
    "polars",
    "sodapy",
    "pyarrow",
    "shapely",
    "matplotlib",
    "seaborn",
    "pyogrio",
    "fsspec",
    "sodapy"
]

[project.scripts]
"tdsp-navigator" = "tdsp_navigator.__main__:main"

[project.entry-points."kedro.hooks"]

[project.optional-dependencies]
docs = [
    "docutils<0.21",
    "sphinx>=5.3,<7.3",
    "sphinx_rtd_theme==2.0.0",
    "nbsphinx==0.8.1",
    "sphinx-autodoc-typehints==1.20.2",
    "sphinx_copybutton==0.5.2",
    "ipykernel>=5.3, <7.0",
    "Jinja2<3.2.0",
    "myst-parser>=1.0,<2.1"
]
dev = [
    "pytest-cov~=3.0",
    "pytest-mock>=1.7.1, <2.0",
    "pytest~=7.2",
    "ruff~=0.1.8"
]

[tool.setuptools.dynamic]
version = {attr = "tdsp_navigator.__version__"}

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.kedro]
package_name = "tdsp_navigator"
project_name = "tdsp_navigator"
kedro_init_version = "0.19.14"
tools = "['Linting', 'Testing', 'Custom Logging', 'Documentation', 'Data Structure']"
example_pipeline = "False"
source_dir = "src"

[tool.pytest.ini_options]
addopts = """
--cov-report term-missing \
--cov src/tdsp_navigator -ra"""

[tool.ruff]
line-length = 88
show-fixes = true
select = ["F", "W", "E", "I", "UP", "PL", "T201"]
ignore = ["E501"]

[tool.kedro_telemetry]
project_id = "56801d1a2b4c4eac9301086b29c92769"